# photorg

./: .gitignore  LICENSE  Readme  Readme.md  common.py  ddiff  ddiff.todo  filename_test.py  hachoir-metadata-example.py  ls_dates.py  photorg  photorg-deduplicate  photorg-move-by-name  photorg.py  photorg2.py  pyproject.toml  riff.py  setup.py  sha1sums.py  todo
photorg/: __init__.py  common.py  deduplicate.py  photorg.py
src/photorg/: __init__.py  common.py  deduplicate.py  photorg.py
